# kotlin-desktop-toolkit

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  README.md  gradle.properties  settings.gradle.kts
native/: .gitignore  .rustfmt.toml  Cargo.toml
native/.cargo/: config.toml
native/desktop-common/: Cargo.toml
native/desktop-common/src/: ffi_utils.rs  lib.rs  logger.rs  logger_api.rs
native/desktop-gtk/: Cargo.toml  cbindgen.toml
native/desktop-gtk/examples/sample_gtk/: main.rs  sample_gtk_actions.rs  sample_gtk_draw.rs  sample_gtk_draw_skia.rs  sample_gtk_impl.rs
native/desktop-gtk/examples/test_app_data_source/: main.rs  test_app_data_source_impl.rs
native/desktop-gtk/src/: lib.rs
native/desktop-gtk/src/gtk/: application.rs  application_api.rs  application_state.rs  async_event_result.rs  clipboard.rs  data_transfer.rs  data_transfer_api.rs  desktop_settings.rs  desktop_settings_api.rs  drag_icon.rs  events.rs  ffi_return_conversions.rs  file_dialog.rs  file_dialog_api.rs  geometry.rs  gl_widget.rs  kdt_application.rs  keyboard.rs  layout_manager_wrapper.rs  mime_types.rs  mod.rs  mouse.rs  notifications.rs  pointer_shapes.rs  pointer_shapes_api.rs  rendering_gl.rs  screen.rs  string_api.rs  string_utils.rs  text_input.rs  text_input_api.rs  window.rs  window_api.rs  window_resize_edge.rs  window_resize_edge_api.rs  xdg_desktop_settings.rs  xdg_desktop_settings_api.rs
native/desktop-linux/: Cargo.toml  build.rs  cbindgen.toml
native/desktop-linux-sample/: Cargo.toml
native/desktop-linux-sample-x11/: Cargo.toml
native/desktop-linux-sample-x11/src/: gl_sys.rs  main.rs  sample_linux.rs
native/desktop-linux-sample/src/: gl_sys.rs  sample_linux.rs
native/desktop-linux-test-helper/: Cargo.toml
native/desktop-linux-test-helper-http/: Cargo.toml
native/desktop-linux-test-helper-http/src/: linux_test_helper_http.rs  main.rs
native/desktop-linux-test-helper/src/: k_az  k_de  k_fr  k_rs  lib.rs
native/desktop-linux-x11/: Cargo.toml  cbindgen.toml
native/desktop-linux-x11/src/linux/: application.rs  application_api.rs  application_state.rs  async_event_result.rs  clipboard.rs  data_transfer.rs  drag_icon.rs  events.rs  geometry.rs  gl_widget.rs  keyboard.rs  mime_types.rs  mod.rs  mouse.rs  pointer_shapes.rs  pointer_shapes_api.rs  rendering_egl.rs  rendering_software.rs  screen.rs  text_input.rs  text_input_api.rs  user_events.rs  window.rs  window_api.rs  window_resize_edge.rs  window_resize_edge_api.rs  xdg_desktop_settings.rs  xdg_desktop_settings_api.rs
native/desktop-linux/.cargo/: config.toml
native/desktop-linux/docs/wayland-support/: ubuntu-22-04-gnome.txt  ubuntu-22-04-sway.txt
native/desktop-linux/examples/sample_linux/: main.rs  sample_linux.rs  sample_linux_draw.rs
native/desktop-linux/examples/wayland_virtual_devices/: k_en  k_lv_erg  k_tr_f  main.rs  wayland_virtual_devices.rs  wayland_virtual_devices_lib.rs
native/desktop-linux/headers/: desktop_linux.h
native/desktop-linux/src/: lib.rs  smoke_tests.rs
native/desktop-linux/src/linux/: application.rs  application_api.rs  application_state.rs  async_event_result.rs  clipboard.rs  cursors.rs  data_transfer.rs  desktop_settings.rs  desktop_settings_api.rs  dma.rs  drag_icon.rs  events.rs  ffi_return_conversions.rs  file_dialog.rs  file_dialog_api.rs  geometry.rs  keyboard.rs  mod.rs  mouse.rs  notifications.rs  pointer_shapes.rs  pointer_shapes_api.rs  rendering_egl.rs  rendering_software.rs  screen.rs  string_api.rs  text_input.rs  text_input_api.rs  virtual_keys.rs  window.rs  window_api.rs  window_resize_edge.rs  xdg_desktop_settings.rs  xdg_desktop_settings_api.rs
native/desktop-macos/: Cargo.toml  build.rs  cbindgen.toml
native/desktop-macos/.cargo/: config.toml
native/desktop-macos/headers/: desktop_macos.h
native/desktop-macos/src/: common.rs  geometry.rs  lib.rs  logger.rs  logger_api.rs
native/desktop-macos/src/macos/: appearance.rs  application_api.rs  application_menu.rs  application_menu_api.rs  bundle_proxy.rs  converters.rs  cursor.rs  custom_titlebar.rs  dispatcher.rs  display_link.rs  drag_and_drop.rs  events.rs  file_dialog.rs  image.rs  keyboard.rs  metal_api.rs  mod.rs  mouse.rs  notifications.rs  notifications_api.rs  pasteboard.rs  robot.rs  robot_api.rs  screen.rs  sound_api.rs  string.rs  text_direction.rs  text_input_client.rs  text_input_source_api.rs  text_operations.rs  titlebar.rs  url.rs  url_api.rs  window.rs  window_api.rs
native/desktop-macos/tests/: tests.rs
native/desktop-macos/tests/utils/: test_utils.rs
native/desktop-win32/: Cargo.toml  cbindgen.toml
native/desktop-win32/docs/: AGENTS.md  ARCHITECTURE.md  FFI_CONVENTIONS.md  SUBSYSTEMS.md  TODO.md
native/desktop-win32/docs/plans/: 2026-04-30-win32-caption-buttons.md
native/desktop-win32/docs/specs/: 2026-04-30-win32-caption-buttons-design.md  2026-05-22-win32-compositor-driver-design.md  2026-05-26-win32-system-menu-restoration-design.md  2026-05-27-win32-dark-system-menu-design.md  2026-06-08-win32-ui-thread-dispatcher-design.md
native/desktop-win32/src/: lib.rs  logger_api.rs
native/desktop-win32/src/win32/: appearance.rs  appearance_api.rs  application.rs  application_api.rs  caption_buttons.rs  clipboard.rs  clipboard_api.rs  clipboard_result.rs  com.rs  composition.rs  compositor_driver.rs  cursor.rs  cursor_api.rs  data_object.rs  data_object_api.rs  data_reader.rs  data_transfer.rs  data_transfer_api.rs  dispatcher.rs  drag_drop.rs  drag_drop_api.rs  event_loop.rs  events.rs  events_api.rs  file_dialog.rs  file_dialog_api.rs  font_settings.rs  font_settings_api.rs  geometry.rs  global_data.rs  keyboard.rs  keyboard_api.rs  mod.rs  pointer.rs  renderer_angle.rs  renderer_api.rs  renderer_egl_utils.rs  screen.rs  (+9 more)
native/desktop-windows/: Cargo.toml  build.rs  cbindgen.toml
native/desktop-windows/headers/: desktop_windows.h
native/desktop-windows/src/: lib.rs  logger_api.rs
native/kwm-macos/: Cargo.toml  build.rs  cbindgen.toml
native/kwm-macos/headers/: kwm_macos.h
native/kwm-macos/src/: common.rs  lib.rs  logger.rs  logger_api.rs  playground.rs
(+358 files in other folders)
