[workspace]
resolver = "2"
members = [ "desktop-common", "desktop-linux","desktop-macos"]

[profile.dev]

[profile.release]
lto = true
strip = "symbols"

[profile.bench]
inherits = "release"
strip = false

[workspace.dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
log = "0.4.22"
log4rs = "1.3.0"
cbindgen = "0.28.0"