[workspace]
resolver = "2"
members = [ "desktop-common", "desktop-linux", "desktop-linux-sample", "desktop-macos", "desktop-win32" ]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.dev]

[profile.release]
lto = true
strip = "symbols"

[profile.bench]
inherits = "release"
strip = false

[workspace.dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
log = "0.4.29"
log4rs = "1.4.0"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing-panics-doc = "allow"
missing-errors-doc = "allow"
option_if_let_else = "allow"
struct_excessive_bools = "allow"
cast_possible_wrap = "allow"
match_same_arms = "allow"
