[package]
name = "desktop-gtk"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "desktop_gtk"

[lints]
workspace = true

[features]
enabled = ['dep:gtk4', 'dep:ashpd', 'dep:zbus', 'dep:tokio']

[dependencies]
anyhow.workspace = true
log.workspace = true
log4rs.workspace = true
desktop-common = { path = "../desktop-common" }

enumflags2 = "0.7.12"
futures-lite = "2.6.0"
keycode = "1.0.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.6"
tokio = { version = "1.46.1", features = ["rt-multi-thread"], optional = true }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"], optional = true }
gtk4 = { version = "0.10.3", features = ["v4_2"], optional = true }

[target.'cfg(target_os="linux")'.dependencies]
ashpd = { version = "0.12.0", default-features = false, features = ["gtk4", "tokio"], optional = true }

[target.'cfg(not(target_os="linux"))'.dependencies]
ashpd = { version = "0.12.0", default-features = false, features = ["tokio"], optional = true }

[dev-dependencies]
url = "2.5.7"
gles30 = { version = "0.5.2", features = ["struct_loader"] }
