[package]
name = "desktop-gtk"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "desktop_gtk"

[lints]
workspace = true

[features]
skia = ['dep:skia-safe']

[dependencies]
anyhow.workspace = true
log.workspace = true
desktop-common = { path = "../desktop-common" }

[target.'cfg(target_os="linux")'.dependencies]
async-channel = "2.5.0"
bitflag-attr = "0.13.0"
keycode = "1.0.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.9.0"
gtk4 = { version = "0.11.0", features = ["v4_2"] }
glib-unix =  { version = "0.22.0" }
skia-safe = { optional = true, version = "0.93.0", default-features = true, features = ["gl"] }

[target.'cfg(target_os="linux")'.dev-dependencies]
url = "2.5.8"
gles30 = { version = "0.5.2", features = ["struct_loader"] }
