[package]
name = "desktop-linux-test-helper-http"
version.workspace = true
edition.workspace = true

[[bin]]
name = "desktop-linux-test-helper-http"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
log4rs.workspace = true
desktop-linux-test-helper = { path = "../desktop-linux-test-helper" }

[target.'cfg(target_os="linux")'.dependencies]
tiny_http = "0.12.0"
url = "2.5.4"
