[package]
name = "desktop-linux-x11"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "desktop_linux_x11"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
log4rs.workspace = true
desktop-common = { path = "../desktop-common" }

[target.'cfg(target_os="linux")'.dependencies]
ashpd = { version = "0.12.0", default-features = false, features = ["gtk4", "tokio"] }
enumflags2 = "0.7.12"
futures-lite = "2.6.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
xkeysym = "0.2.1"
gtk4 = { version = "0.10.3", features = ["v4_2"] }
