[package]
name = "desktop-linux"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "desktop_linux"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
log4rs.workspace = true
desktop-common = { path = "../desktop-common" }

[target.'cfg(target_os="linux")'.dependencies]
smithay-client-toolkit = "0.20.0"
ashpd = { version = "0.12.0", default-features = false, features = ["tokio", "wayland"] }
enumflags2 = "0.7.12"
futures-lite = "2.6.0"
wayland-egl = "0.32.5"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
libloading = "0.8.6"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
