[package]
name = "desktop-linux"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "desktop_linux"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
log4rs.workspace = true
desktop-common = { path = "../desktop-common" }

[target.'cfg(target_os="linux")'.dependencies]
smithay-client-toolkit = "0.20.0"
ashpd = { version = "0.13.4", default-features = false, features = ["file_chooser", "open_uri", "settings", "tokio", "wayland"] }
bitflag-attr = "0.13.0"
futures-lite = "2.6.1"
wayland-egl = "0.32.9"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }

[target.'cfg(target_os="linux")'.dev-dependencies]
gles30 = { version = "0.5.2", features = ["struct_loader"] }
keycode = "1.0.0"
url = "2.5.8"