[package]
name = "desktop-macos"
version.workspace = true
edition.workspace = true

# todo filter supported targets
# when cargo will implement it
# https://github.com/rust-lang/cargo/issues/6179

[lib]
crate-type = ["rlib", "cdylib"]
name = "desktop_macos"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
log4rs.workspace = true
desktop-common = { path = "../desktop-common" }
bitflags = "2.6.0"

[build-dependencies]
cbindgen.workspace = true
build-target = "0.4.0"

[dev-dependencies]
test-log.workspace = true
quickcheck = "1"
quickcheck_macros = "1"

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.5"
# todo update dispatch
dispatch2 = { version = "0.2.0" }
# "catch-all" feature add try catch for obj-c exceptions in msg_send![]
# it's nice to have at least for beginning, but later we need to check how it impacts performance
objc2 = { version = "0.6.0", features = ["exception", "catch-all"] }
objc2-foundation = { version = "0.3.0" }
objc2-app-kit = { version = "0.3.0", features = [
  "NSApplication",
  "NSWindow",
  "NSWindowRestoration",
  "NSGraphics",
  "NSScreen",
  "NSRunningApplication",
  "NSResponder",
  "NSView",
  "NSLayoutAnchor",
  "NSControl",
  "NSButton",
  "NSLayoutConstraint",
  "NSVisualEffectView",
  "NSColor",
  "NSMenu",
  "NSMenuItem",
  "NSCell",
  "NSEvent",
  "NSText",
  "NSColorSpace",
  "NSGraphicsContext",
  "objc2-quartz-core",
] }
objc2-quartz-core = { version = "0.3.0" }
objc2-core-graphics = { version = "0.3.0" }
objc2-metal = { version = "0.3.0" }
objc2-uniform-type-identifiers = { version = "0.3.0" }
num-traits = "0.2"
num-derive = "0.4"
