[package]
name = "desktop-win32"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "desktop_win32"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
khronos-egl = { version = "6.0", features = ["dynamic"] }
log.workspace = true
log4rs.workspace = true
desktop-common = { path = "../desktop-common" }

[target.'cfg(target_os = "windows")'.dependencies]
windows-numerics = "0.2.0"
windows = { version = "0.61.3", features = [
    "System",
    "UI_Composition",
    "UI_Composition_Desktop",
    "UI_Input",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_System_WinRT_Metadata",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_WindowsAndMessaging",
] }
