[package]
name = "desktop-windows"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]
name = "desktop_windows"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
khronos-egl = { version = "6.0", features = ["dynamic"] }
libloading = "0.8"
log.workspace = true
log4rs.workspace = true
desktop-common = { path = "../desktop-common" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "System",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
cbindgen = "0.29.0"
