[package]
name = "kwm-macos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]
name = "kwm_macos"

[[bin]]
name = "playground"
path = "src/playground.rs"

[dependencies]
anyhow = "1.0.93"
bitflags = "2.6.0"

[build-dependencies]
cbindgen = "0.27.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[target.'cfg(target_os = "macos")'.dependencies]
foreign-types = "0.5"
dispatch = { version = "0.2.0" }
objc2 = { version = "0.5.2" }
objc2-foundation = { version = "0.2.2", features = ["all"] }
objc2-app-kit = { version = "0.2.2", features = [
  "NSApplication",
  "NSWindow",
  "NSWindowRestoration",
  "NSGraphics",
  "NSScreen",
  "NSRunningApplication",
  "NSResponder",
  "NSView",
  "NSLayoutConstraint",
  "NSVisualEffectView",
  "NSMenu",
  "NSMenuItem",
  "NSCell",
  "NSEvent",
  "NSText",
  "NSColorSpace",
  "objc2-quartz-core"
] }
objc2-quartz-core = { version = "0.2.2", features = ["all"] }
objc2-metal = { version = "0.2.2", features = ["all"] }
objc2-metal-kit = { version = "0.2.2", features = ["all"] }